# axum-grpc-consul

./: .gitignore  Cargo.toml  README.md  build.rs
consul/: 01.安装consul.sh  02.本地开发部署.sh  03.服务注册与发现.sh  04.群集部署.sh
consul/一键脚本/: install.sh
proto/: calculate.proto  echo.proto
src/: calc-srv.rs  calc-web.rs  echo-srv.rs  echo-web.rs  lib.rs  pb.rs
