[package]
name = "axum-grpc-consul"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/AxumCourse/axum-grpc-consul"
homepage = "https://axum.rs"
description = "axum.rs专题：axum、gRPC和Consul实现微服务的服务注册与发现"

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.11"
tonic = "0.8"
axum = "0.5"
serde = { version="1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "echo-srv"
path = "src/echo-srv.rs"

[[bin]]
name = "calc-srv"
path = "src/calc-srv.rs"

[[bin]]
name = "echo-web"
path = "src/echo-web.rs"

[[bin]]
name = "calc-web"
path = "src/calc-web.rs"